--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "next": "15.1.6",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-virtualized-auto-sizer": "^1.0.25",
+    "react-window": "^1.8.11"
   }
 }
